[package]
name = "ghost-markdown-importer"
version = "0.1.0"
edition = "2021"
authors = ["hansuku"]
description = "Convert Markdown files to Ghost CMS import format"
license = "MIT"
repository = "https://github.com/Hansuku/ghost-markdown-importer"
keywords = ["ghost", "markdown", "cms", "import", "blog"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"
homepage = "https://github.com/Hansuku/ghost-markdown-importer"
documentation = "https://github.com/Hansuku/ghost-markdown-importer"

[dependencies]
pulldown-cmark = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.4"
uuid = { version = "1.8", features = ["v4"] }
zip = "2.2"
thiserror = "1.0"
anyhow = "1.0"
regex = "1.10"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "gmi"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
